# kcom-student-health-risk

./: .env.example  .gitignore  AGENTS.md  Iteration.md  Makefile  README.md  pyproject.toml
.ai/prompts/: starter.md
.kaggle/: access_token.example
config/: baseline.yaml  ensemble.yaml  stack.yaml
experiments/: latest_metrics.json
experiments/latest_run/: config.json  health_risk_model.pkl  metrics.json
notebooks/: 1_EDA.ipynb  2_Baseline.ipynb  3_TabPFN.ipynb  4_ScoreCeiling.ipynb  5_Stack.ipynb
scripts/: compare_baselines.py  list_stats.py  predict.py  train.py  train_ensemble.py  train_stack.py  verify_autogluon.py  verify_tabpfn.py
scripts/kernels/: baseline.py  ensemble.py  stack.py  tabpfn.py
scripts/nbs/: build_baseline.py  build_eda.py  build_tabpfn.py
src/student_health/: __init__.py  cv.py  data.py  ensemble.py  features.py  metrics.py  models.py  preprocess.py  tracking.py
tests/: test_ensemble_metrics.py  test_models.py
