[project]
name = "kcom-student-health-risk"
version = "0.1.0"
description = "Kaggle Playground Series: Student Health Risk Prediction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "lightgbm>=4.3",
    "polars>=0.20",
    "pyarrow>=15.0",
    "scipy>=1.13",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "jupyter>=1.1",
    "ipykernel>=6.29",
    "tqdm>=4.66",
    "optuna>=3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pre-commit>=3.7",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/student_health"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]